--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
         <div class="row justify-content-center">
           <button type="button" class="ingredients-button" data-bs-toggle="modal" href="#ingredients">
             View Our Full List of Ingredients
-            <img class="new__window ms-3" src="/assets/images/new-window.png" alt="new-window">
+            <img class="new__window ms-3" src="./assets/images/new-window.png" alt="new-window">
           </button>
         </div>
         <div class="row pb-5 text-center">
@@ -719,7 +719,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body d-flex justify-content-center">
-            <img class="img-fluid" src="/assets/images/full_ingredients.png" alt="full_ingredients">
+            <img class="img-fluid" src="./assets/images/full_ingredients.png" alt="full_ingredients">
           </div>
         </div>
       </div>
