--- a/index.html
+++ b/index.html
@@ -470,12 +470,14 @@
         <div class="bundle-title">Choose your Purpose Bundle:</div>
         <div class="bundle-list">
           <div class="row">
-            <div class="col-lg-4 col-md-12">
+              <img data-left src="./assets/images/arrow-left.png" alt="arrow-left">
+              <img data-right src="./assets/images/arrow-right.png" alt="arrow-right">
+            <div class="bundle-item show col-lg-4 col-md-12">
               <div class="card text-center">
                 <div class="title">One Month Supply</div>
                 <div class="image-desc d-flex justify-content-center">
-                  <img src="/assets/images/one_month.png" alt="one" />
-                  <img src="/assets/images/guarranteed.png" alt="one" />
+                  <img src="./assets/images/one_month.png" alt="one" />
+                  <img src="./assets/images/guarranteed.png" alt="one" />
                 </div>
                 <span class="caption text-center">30 Easy Mix Packets</span>
                 <span class="description">Most Economical</span>
@@ -484,16 +486,16 @@
                 </div>
                 <div class="retail-price">$97USD</div>
                 <div class="saved">You saved $18USD</div>
-                <button class="bundle-button" data-one>Add To Cart <i class="fa-solid fa-play ms-3"></i></button>
+                <button class="bundle-button">Add To Cart <i class="fa-solid fa-play ms-3"></i></button>
                 <div class="caption">Fast & Free Shipping</div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="bundle-item col-lg-4 col-md-12">
               <div class="card text-center">
                 <div class="title">3 Months + 3 FREE Month</div>
                 <div class="image-desc d-flex justify-content-center">
-                  <img src="/assets/images/three_months.png" alt="two" />
-                  <img src="/assets/images/guarranteed.png" alt="two" />
+                  <img src="./assets/images/three_months.png" alt="two" />
+                  <img src="./assets/images/guarranteed.png" alt="two" />
                 </div>
                 <div class="best-desc">THREE MONTH FREE</div>
                 <span class="caption">180 Easy Mix Packets</span>
@@ -503,16 +505,16 @@
                 </div>
                 <div class="retail-price">$291USD</div>
                 <div class="saved">You saved $291USD</div>
-                <button class="bundle-button" data-two>Add To Cart <i class="fa-solid fa-play ms-3"></i></button>
+                <button class="bundle-button">Add To Cart <i class="fa-solid fa-play ms-3"></i></button>
                 <div class="caption">Fast & Free Shipping</div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-12">
+            <div class="bundle-item col-lg-4 col-md-12">
               <div class="card text-center">
                 <div class="title">2 Months + 1 FREE Month</div>
                 <div class="image-desc d-flex justify-content-center">
-                  <img src="/assets/images/two_months.png" alt="three" />
-                  <img src="/assets/images/guarranteed.png" alt="three" />
+                  <img src="./assets/images/two_months.png" alt="three" />
+                  <img src="./assets/images/guarranteed.png" alt="three" />
                 </div>
                 <div class="best-desc">ONE MONTH FREE</div>
                 <span class="caption">60 Easy Mix Packets</span>
@@ -522,7 +524,7 @@
                 </div>
                 <div class="retail-price">$194USD</div>
                 <div class="saved">You saved $171USD</div>
-                <button class="bundle-button" data-one>Add To Cart <i class="fa-solid fa-play ms-3"></i></button>
+                <button class="bundle-button">Add To Cart <i class="fa-solid fa-play ms-3"></i></button>
                 <div class="caption">Fast & Free Shipping</div>
               </div>
             </div>
