--- a/index.html
+++ b/index.html
@@ -479,6 +479,7 @@
                   <img src="./assets/images/one_month.png" alt="one" />
                   <img src="./assets/images/guarranteed.png" alt="one" />
                 </div>
+                <div class="best-desc hide">0</div>
                 <span class="caption text-center">30 Easy Mix Packets</span>
                 <span class="description">Most Economical</span>
                 <div class="original-price">
@@ -497,7 +498,7 @@
                   <img src="./assets/images/three_months.png" alt="two" />
                   <img src="./assets/images/guarranteed.png" alt="two" />
                 </div>
-                <div class="best-desc">THREE MONTH FREE</div>
+                <div class="best-desc ">THREE MONTH FREE</div>
                 <span class="caption">180 Easy Mix Packets</span>
                 <span class="description">Biggest Savings</span>
                 <div class="original-price">
